Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 *,
 *:after,
-*:before: {
+*:before {
     box-sizing: inherit;
 }
 
@@ -10,9 +10,14 @@ html {
 
 body {
     color: #111;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 300;
+    height: 100vh;
     margin: 0;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    width: 100vw;
 }
 
 a {
@@ -50,11 +55,10 @@ h2 {
 }
 
 .slide-menu {
-    position: absolute;
+    position: fixed;
     top: 3.5em;
     padding: 1em;
     background: #4caf50;
-    height: 100%;
     width: 10em;
     transform: translate3d(0, 0, 0);
     transition: transform 0.2s;
